
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int fprintf (int ,char*) ;
 int stderr ;

void usage() {
 fprintf(stderr, "\tLinksys dhcp memory disclosure exploit\n");
 fprintf(stderr, "\tby Jon Hart <warchild@spoofed.org>\n");
 fprintf(stderr, "\thttp://spoofed.org/files/linksys-dhcp-exploit.c\n");
 fprintf(stderr, "\n\tUsage:\n");
 fprintf(stderr, "\t\t-c count  # number of packets to send\n");
 fprintf(stderr, "\t\t-i interface  # interface to send packets to\n");
 fprintf(stderr, "\t\t-p payload # payload to put in the bootp packet\n");
 fprintf(stderr, "\t\t-s seconds  # (optional) seconds to sleep between packets\n");
 fprintf(stderr, "\t\t-X   # dump captured data\n");
 fprintf(stderr, "\n\n");
}
